@@ -5,11 +5,9 @@ import com.example.demo5.data.mapper.ChucVuMapper;
 import com.example.demo5.data.mapper.NhanVienMapper;
 import com.example.demo5.data.mapper.PhongBanMapper;
 import com.example.demo5.data.mapper.TienLuongMapper;
+import com.example.demo5.data.request.FilterCondition;
 import com.example.demo5.data.request.NhanVienRequest;
-import com.example.demo5.data.response.ChucVuResponse;
-import com.example.demo5.data.response.NhanVienResponse;
-import com.example.demo5.data.response.PhongBanResponse;
-import com.example.demo5.data.response.TienLuongResponse;
+import com.example.demo5.data.response.*;
 import com.example.demo5.repository.ChucVuRepository;
 import com.example.demo5.repository.NhanVienRepository;
 import com.example.demo5.repository.PhongBanRepository;
@@ -17,6 +15,9 @@ import com.example.demo5.repository.TienLuongRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import test.generated.tables.pojos.ChucVu;
 import test.generated.tables.pojos.NhanVien;
@@ -25,6 +26,7 @@ import test.generated.tables.pojos.TienLuong;
 
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @SuppressWarnings("ALL")
@@ -42,68 +44,137 @@ public class NhanVienServiceImpl implements NhanVienService {
     PhongBanRepository phongBanRepository;
 
     @Override
-    public void save(NhanVienRequest nhanVienRequest) {
+    public Void save(NhanVienRequest nhanVienRequest) {
+        PhongBan phongBan = phongBanRepository.findById(nhanVienRequest.getIdPhongBan());
+        ChucVu chucVu = chucVuRepository.findById(nhanVienRequest.getIdChucVu());
+        TienLuong tienLuong = tienLuongRepository.findById(nhanVienRequest.getIdTienLuong());
+        NhanVien nhanVien = nhanVienMapper.toEntity(nhanVienRequest);
+        nhanVien.setIdChucVu(chucVu.getId());
+        nhanVien.setIdTienLuong(tienLuong.getId());
+        nhanVien.setIdPhongBan(phongBan.getId());
+        nhanVienRepository.save(nhanVien);
+        return null;
+    }
+    public NhanVienResponse toResponse(NhanVien nhanVien, PhongBanResponse phongBanResponse, ChucVuResponse chucVuResponse, TienLuongResponse tienLuongResponse) {
+        // Chuyển đối tượng NhanVien thành NhanVienResponse
+
+
+        return nhanVienMapper.toNhanVienResponse(nhanVien, phongBanResponse, chucVuResponse, tienLuongResponse);
+    }
+    private PageResponse<NhanVienResponse> toPageResponse(Pageable pageable, List<NhanVienResponse> nhanViens, Page<NhanVien> page) {
+        return PageResponse.<NhanVienResponse>builder()
+                .content(nhanViens)
+                .pageNo(pageable.getPageNumber())
+                .pageSize(pageable.getPageSize())
+                .totalElements(page.getTotalElements())
+                .totalPages(page.getTotalPages())
+                .build();
+
     }
 
     @Override
     public NhanVienResponse getById(Long id) {
+        NhanVien nhanVien = nhanVienRepository.findById(id);
+
+       PhongBan phongBan = phongBanRepository.findById(nhanVien.getIdPhongBan());
+       PhongBanResponse phongBanResponse = phongBanMapper.toPhongBanResponse(phongBan);
+
+       ChucVu chucVu = chucVuRepository.findById(nhanVien.getIdChucVu());
+       ChucVuResponse chucVuResponse = chucVuMapper.toChucVuResponse(chucVu);
+
+       TienLuong tienLuong = tienLuongRepository.findById(nhanVien.getIdTienLuong());
+       TienLuongResponse tienLuongResponse = tienLuongMapper.toTienLuongResponse(tienLuong);
+
+        // Gọi phương thức toResponse để trả về NhanVienResponse
+        return toResponse(nhanVien, phongBanResponse, chucVuResponse, tienLuongResponse);
+    }
+
+
+    @Override
+    public NhanVienResponse update(NhanVienRequest nhanVienRequest, Long id) {
+        NhanVien nhanVien = nhanVienRepository.findById(id);
+        nhanVienMapper.updateNhanVien(nhanVien, nhanVienRequest);
+        PhongBan phongBan = phongBanRepository.findById(nhanVienRequest.getIdPhongBan());
+        ChucVu chucVu = chucVuRepository.findById(nhanVienRequest.getIdChucVu());
+        TienLuong tienLuong = tienLuongRepository.findById(nhanVienRequest.getIdTienLuong());
+
+        PhongBanResponse phongBanResponse = phongBanMapper.toPhongBanResponse(phongBan);
+        ChucVuResponse chucVuResponse = chucVuMapper.toChucVuResponse(chucVu);
+        TienLuongResponse tienLuongResponse = tienLuongMapper.toTienLuongResponse(tienLuong);
+
+        nhanVienRepository.update(nhanVien);
+        return nhanVienMapper.toNhanVienResponse(nhanVien, phongBanResponse, chucVuResponse, tienLuongResponse);
+    }
+
+
+    @Override
+    public Void delete(Long id) {
+        NhanVien nhanVien = nhanVienRepository.findById(id);
+        nhanVienRepository.deleteById(id);
         return null;
     }
 
     @Override
-    public List<NhanVienResponse> getAllNhanVien() {
-        List<NhanVien> nhanVienList = nhanVienRepository.findAll();
+    public PageResponse<NhanVienResponse> searchNhanVien(List<FilterCondition> filterConditions, Pageable pageable) {
+        // Truy vấn danh sách nhân viên theo các điều kiện lọc và phân trang
+        Page<NhanVien> nhanVienPage = nhanVienRepository.searchNhanVien(filterConditions, pageable);
+        List<NhanVien> nhanViens = nhanVienPage.getContent();
 
-        return nhanVienList.stream()
-                .map(nhanVien -> {
-                    NhanVienResponse nhanVienResponse = nhanVienMapper.toNhanVienResponse(nhanVien);
+        // Lấy danh sách id phòng ban từ các nhân viên
+        List<Long> idPhongBans = nhanViens.stream().map(NhanVien::getIdPhongBan).toList();
+        // Tạo Map ánh xạ id phòng ban sang PhongBanResponse
+        Map<Long, PhongBanResponse> phongBanResponseMap = phongBanRepository.findAllByListPBId(idPhongBans).stream()
+                .collect(Collectors.toMap(PhongBan::getId, phongBanMapper::toPhongBanResponse));
 
-                    PhongBan phongBan = phongBanRepository.findById(nhanVien.getIdPhongBan());
-                    PhongBanResponse phongBanResponse = phongBanMapper.toPhongBanResponse(phongBan);
+        // Lấy danh sách id chức vụ từ các nhân viên
+        List<Long> idChucVus = nhanViens.stream().map(NhanVien::getIdChucVu).toList();
+        // Tạo Map ánh xạ id chức vụ sang ChucVuResponse
+        Map<Long, ChucVuResponse> chucVuResponseMap = chucVuRepository.findAllByListChucVuId(idChucVus).stream()
+                .collect(Collectors.toMap(ChucVu::getId, chucVuMapper::toChucVuResponse));
 
-                    ChucVu chucVu = chucVuRepository.findById(nhanVien.getIdChucVu());
-                    ChucVuResponse chucVuResponse = chucVuMapper.toChucVuResponse(chucVu);
+        // Lấy danh sách id tiền lương từ các nhân viên
+        List<Long> idTienLuongs = nhanViens.stream().map(NhanVien::getIdTienLuong).toList();
+        // Tạo Map ánh xạ id tiền lương sang TienLuongResponse
+        Map<Long, TienLuongResponse> tienLuongResponseMap = tienLuongRepository.findAllByListTLId(idTienLuongs).stream()
+                .collect(Collectors.toMap(TienLuong::getId, tienLuongMapper::toTienLuongResponse));
 
-                    TienLuong tienLuong = tienLuongRepository.findById(nhanVien.getIdTienLuong());
-                    TienLuongResponse tienLuongResponse = tienLuongMapper.toTienLuongResponse(tienLuong);
+        // Duyệt qua danh sách nhân viên và tạo danh sách NhanVienResponse
+        List<NhanVienResponse> nhanVienResponses = nhanViens.stream().map(nhanVien -> {
+            // Lấy thông tin phòng ban, chức vụ, tiền lương từ các Map
+            PhongBanResponse phongBanResponse = phongBanResponseMap.get(nhanVien.getIdPhongBan());
+            ChucVuResponse chucVuResponse = chucVuResponseMap.get(nhanVien.getIdChucVu());
+            TienLuongResponse tienLuongResponse = tienLuongResponseMap.get(nhanVien.getIdTienLuong());
 
-                    nhanVienResponse.setPhongBan(phongBanResponse);
-                    nhanVienResponse.setChucVu(chucVuResponse);
-                    nhanVienResponse.setTienLuong(tienLuongResponse);
-                    return nhanVienResponse;
+            // Tạo NhanVienResponse từ các thông tin đã có
+            return toResponse(nhanVien, phongBanResponse, chucVuResponse, tienLuongResponse);
+        }).toList();
 
-                })
-                .collect(Collectors.toList());
+        // Trả về kết quả phân trang chứa danh sách NhanVienResponse và thông tin phân trang
+        return toPageResponse(pageable, nhanVienResponses, nhanVienPage);
     }
 
     @Override
-    public List<NhanVienResponse> listNhanVien() {
-        //lấy danh sách nhn viên từ repository
-        List<NhanVien> nhanVienList1 = nhanVienRepository.findAllByNhanVien();
-        //Chuyển đổi NhanVien thành NhanVienResponse
-        return nhanVienList1.stream()
-                .map(nhanVien -> {
-                    //chuyển đổi đối tượng NhanVien thành NhanVienResponse
-                    NhanVienResponse nhanVienResponse = nhanVienMapper.toNhanVienResponse(nhanVien);
-                    //lấy thông tin của phòng ban từ repository
-                    PhongBan phongBan = phongBanRepository.findById(nhanVien.getIdPhongBan());
-                    PhongBanResponse phongBanResponse = phongBanMapper.toPhongBanResponse(phongBan);
+    public PageResponse<NhanVienResponse> getPageNhanVien(Pageable pageable) {
+        Page<NhanVien> page = nhanVienRepository.getNhanVien(pageable);
 
-                    ChucVu chucVu = chucVuRepository.findById(nhanVien.getIdChucVu());
-                    ChucVuResponse chucVuResponse = chucVuMapper.toChucVuResponse(chucVu);
+        List<NhanVien> nhanViens = page.getContent();
+        List<Long> idPhongBans = nhanViens.stream().map(NhanVien::getIdPhongBan).toList();
+        Map<Long,PhongBanResponse> phongBanResponseMap = phongBanRepository.findAllByListPBId(idPhongBans).stream().collect(Collectors.toMap(PhongBan::getId, phongBanMapper::toPhongBanResponse));
 
-                    TienLuong tienLuong = tienLuongRepository.findById(nhanVien.getIdTienLuong());
-                    TienLuongResponse tienLuongResponse = tienLuongMapper.toTienLuongResponse(tienLuong);
+        List<Long> idChucVus=nhanViens.stream().map(NhanVien::getIdChucVu).toList();
+        Map<Long,ChucVuResponse> chucVuResponseMap = chucVuRepository.findAllByListChucVuId(idChucVus).stream().collect(Collectors.toMap(ChucVu::getId, chucVuMapper::toChucVuResponse));
 
-                    //set các thông tin vào NhanVienRespnse
-                    nhanVienResponse.setPhongBan(phongBanResponse);
-                    nhanVienResponse.setChucVu(chucVuResponse);
-                    nhanVienResponse.setTienLuong(tienLuongResponse);
+        List<Long> idTienLuongs = nhanViens.stream().map(NhanVien::getIdTienLuong).toList();
+        Map<Long,TienLuongResponse> tienLuongResponseMap=tienLuongRepository.findAllByListTLId(idTienLuongs).stream().collect(Collectors.toMap(TienLuong::getId, tienLuongMapper::toTienLuongResponse));
 
-                    return nhanVienResponse;
+        List<NhanVienResponse> nhanVienResponses = nhanViens.stream().map(nhanVien -> {
+            PhongBanResponse phongBanResponse = phongBanResponseMap.get(nhanVien.getIdPhongBan());
+            ChucVuResponse chucVuResponse = chucVuResponseMap.get(nhanVien.getIdChucVu());
+            TienLuongResponse tienLuongResponse = tienLuongResponseMap.get(nhanVien.getIdTienLuong());
 
+            return toResponse(nhanVien, phongBanResponse, chucVuResponse, tienLuongResponse);
 
-                })
-                .collect(Collectors.toList());
+        }).toList();
+        return toPageResponse(pageable,nhanVienResponses,page);
     }
 }
